--- a/app-poc/package.json
+++ b/app-poc/package.json
@@ -22,8 +22,11 @@
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^3.2.2",
     "air-port-codes-node": "^1.3.7",
+    "cheerio": "^1.0.0-rc.2",
     "core-js": "^2.5.4",
     "ngx-typeahead": "^6.2.0",
+    "puppeteer": "^1.8.0",
+    "request-promise": "^4.2.2",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
